=== WebCore-125~6~2 ===

2004-04-16  Vicki Murley  <vicki@apple.com>

	- buildit complained about missing CFBundleName.  Add InfoPlist.strings back 
        to the build, with only a CFBundleName (no version or copyright string)
 
        * English.lproj/InfoPlist.strings: Added.
        * WebCore.pbproj/project.pbxproj:

2004-04-16  Vicki Murley  <vicki@apple.com>

	- roll out the change to WebCoreViewFactory.h.  This isn't a part of 
	the onscroll follow-up for 3612968
 
        * kwq/WebCoreViewFactory.h:

2004-04-16  Vicki Murley  <vicki@apple.com>

        Reviewed by kocienda.

	Make this change on the branch for SUPanLavender, at Amy Rapport's request

    2004-03-03  Darin Adler  <darin@apple.com>

        Reviewed by Vicki.

        * English.lproj/InfoPlist.strings: Removed. No need to localize the version and
        copyright string, and that's all that was in here.
        * WebCore.pbproj/project.pbxproj: Removed InfoPlist.strings from build.

=== WebCore-125.6 ===

2004-04-16  Vicki Murley  <vicki@apple.com>
	
	- follow-up fix for 3612968 (clone of 3487207).  Implement 
	onscroll at the document level.

    2004-03-25  David Hyatt  <hyatt@apple.com>

        Implement the rest of the search field.  Make it work with form 
	submission.  Implement onscroll at the document level.
        
        Reviewed by darin

        * kwq/KWQKHTMLPart.h:
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::sendScrollEvent):
        * kwq/WebCoreBridge.h:
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge sendScrollEvent]):
        * kwq/WebCoreViewFactory.h:

2004-04-15  Vicki Murley  <vicki@apple.com>

	- merge the rest of the fix for the zeldman bug (3609695) from HEAD

        * khtml/rendering/render_block.cpp:
        (khtml::RenderBlock::layoutBlockChildren):
        (khtml::RenderBlock::lowestPosition):
        (khtml::RenderBlock::rightmostPosition):
        (khtml::RenderBlock::leftmostPosition):

2004-04-15  Vicki Murley  <vicki@apple.com>
