@@ -101,12 +101,9 @@ CENTER {
       
 HR  { 
         display: block; 
-        margin-top: 12px; 
-        margin-bottom: 12px; 
         border-style: inset;
         border-width: 1px;
-        margin-left: auto;
-        margin-right: auto;
+        margin: 0.5em auto; 
 }
 
 MAP { 
